--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,20 @@
     "noEmit": true,
     "lib": ["dom", "esnext"],
     "jsx": "react-native",
+    "target": "es5",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": false,
+    "importHelpers": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true,
+    "esModuleInterop": true,
+    "sourceMap": true,
+    "allowJs": true
   }
 }
