--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "tslint-config-prettier": "^1.18.0"
   },
   "devDependencies": {
-    "@types/": "expo/vector-icons",
     "@types/expo": "^32.0.13",
     "@types/graphql": "^14.2.3",
+    "@types/node": "^12.6.8",
     "@types/react": "^16.8.19",
     "@types/react-native": "^0.57.60",
     "@types/styled-components": "^4.1.18",
