--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-cache-persist": "^0.1.1",
     "apollo-link-context": "^1.0.18",
+    "axios": "^0.19.0",
     "expo": "^33.0.0",
     "expo-asset": "^5.0.1",
     "expo-font": "^5.0.1",
+    "expo-image-picker": "^6.0.0",
+    "expo-media-library": "^6.0.0",
+    "expo-permissions": "^6.0.0",
     "graphql": "^14.4.2",
     "react": "16.8.3",
     "react-apollo-hooks": "^0.5.0",
